# Trareon-Lab

./: .gitignore  Cargo.toml  LICENSE  PRD-Digital-Forensic-Analysis-Lab.md  README.md  RFC-Digital-Forensic-Analysis-Lab.md
.cargo/: audit.toml
Research/: AnalysisLoom-Repository-Assessment.md  Digital-Forensic-Analysis-Best-Practices.md  Trareon-Lab-Indonesia-Regulatory-Baseline.md  Trareon-Lab-Pain-Point-Gap-Analysis.md  Trareon-Lab-Standards-Compliance-Baseline.md
apps/lab-slint/: Cargo.toml  build.rs
apps/lab-slint/src/: docs_shell.rs  lib.rs  main.rs  session.rs  ui_model.rs
apps/lab-slint/tests/: artifacts_ui.rs  carve_quick_verify.rs  case_open_counts.rs  docs_shell.rs  file_list_keyboard.rs  lab_workbench_chrome.rs  prefs_ui.rs  progress_ui.rs  ui_polish_model.rs  ui_smoke.rs  validation_hooks_ui.rs  workbench_chrome.rs  workbench_ux.rs
apps/lab-slint/ui/: app.slint  strings.slint  theme.slint
apps/lab-slint/ui/assets/fonts/: LICENSE.txt
apps/lab-slint/ui/components/: acquire_stepper.slint  command_palette.slint  context_tile.slint  disclosure_banner.slint  empty_state.slint  icon.slint  inspector_panel.slint  lab_button.slint  lab_header.slint  lab_safety_strip.slint  lab_sidebar.slint  lab_status_bar.slint  list_row.slint  meta_row.slint  metric_tile.slint  nav_group_label.slint  nav_item.slint  panel_card.slint  section_card.slint  stat_card.slint  status_badge.slint  workflow_card.slint
apps/lab-slint/ui/screens/: about_screen.slint  artifacts_screen.slint  bookmarks_screen.slint  capabilities_screen.slint  case_screen.slint  evidence_screen.slint  graph_screen.slint  hex_screen.slint  placeholder_screen.slint  quick_verify_screen.slint  report_screen.slint  runs_screen.slint  search_screen.slint  timeline_screen.slint  transfer_screen.slint
crates/lab-antiforensics/: Cargo.toml
crates/lab-antiforensics/src/: lib.rs
crates/lab-antiforensics/tests/: detect.rs
crates/lab-artifacts/: Cargo.toml
crates/lab-artifacts/src/: browser.rs  evtx.rs  lib.rs  registry.rs
crates/lab-artifacts/tests/: browser_history.rs  parsers.rs  registry_evtx.rs
crates/lab-case/: Cargo.toml
crates/lab-case/migrations/: 001_init.sql  002_append_ledgers.sql  003_evidence_registry.sql  004_bookmarks.sql  005_validation_hooks.sql
crates/lab-case/src/: bookmarks.rs  db.rs  ledger.rs  lib.rs  lifecycle.rs  lock.rs  validation_hooks.rs
crates/lab-case/tests/: append_ledgers.rs  bookmarks_findings.rs  case_lock.rs  migrate_v1.rs  rollback.rs  validation_hooks.rs
crates/lab-crypto/: Cargo.toml
crates/lab-crypto/src/: digest.rs  lib.rs  signature.rs
crates/lab-crypto/tests/: envelope_trust.rs
crates/lab-fs/: Cargo.toml
crates/lab-fs/src/: apfs_synth.rs  content.rs  fat_synth.rs  lib.rs  ntfs_synth.rs  unix_synth.rs
crates/lab-fs/src/apfs/: enumerate.rs  fixture.rs  mod.rs  superblock.rs
crates/lab-fs/src/ext4/: enumerate.rs  fixture.rs  mod.rs  superblock.rs
crates/lab-fs/src/fat/: bpb.rs  enumerate.rs  fixture.rs  mod.rs
crates/lab-fs/src/ntfs/: attribute.rs  boot.rs  enumerate.rs  fixture.rs  mft.rs  mod.rs  runlist.rs  usn.rs
crates/lab-fs/tests/: apfs_real.rs  content_cas.rs  fat_enumerate.rs  fat_ext4_real.rs  ntfs_enumerate.rs  ntfs_real.rs  unix_deleted.rs
crates/lab-fsnap/: Cargo.toml
crates/lab-fsnap/src/: fuzz_entry.rs  import.rs  lib.rs  preflight.rs
crates/lab-fsnap/tests/: hostile_fsnap.rs
crates/lab-hashset/: Cargo.toml
crates/lab-hashset/src/: lib.rs
crates/lab-hashset/tests/: lookup.rs
crates/lab-index/: Cargo.toml
crates/lab-index/migrations/: 001_init.sql
crates/lab-index/src/: lib.rs
crates/lab-index/tests/: index_fs_meta.rs  measure_100k.rs  persist_10k.rs  search_operators.rs  windowed_1m.rs
crates/lab-storage/: Cargo.toml
crates/lab-storage/src/: e01.rs  image.rs  import.rs  lib.rs  raw.rs
crates/lab-storage/tests/: cancel_hash.rs  e01_hostile.rs  e01_roundtrip.rs  hostile_raw.rs  import_raw.rs  progress_hash.rs  raw_hash.rs  unsupported_formats.rs
crates/lab-transfer/: Cargo.toml
crates/lab-transfer/src/: lib.rs
crates/lab-transfer/tests/: transfer_sign.rs
crates/lab-worker/: Cargo.toml
crates/lab-worker/src/: lib.rs  queue.rs
crates/lab-worker/tests/: cancel_resume.rs
crates/lab-yara/: Cargo.toml
crates/lab-yara/src/: lib.rs
crates/lab-yara/tests/: golden.rs  scan.rs
crates/lab-yara/tests/fixtures/: production.yar
docs/: ANALYSIS-PACK-CONTRACT.md  ARCHITECTURE-DECISION-MATRIX.md  CHECKLIST-DAY-01-05.md  (+47 more)
spikes/: COPY-PASTE-AVALONIA.md  COPY-PASTE-INDEX.md  COPY-PASTE-SLINT-PACKAGE.md  COPY-PASTE-SLINT.md  COPY-PASTE-TAURI.md  COPY-PASTE-WINDOWS-KALI.md  Cargo.toml  MEASUREMENT-RUNBOOK.md  README.md
spikes/avalonia/: App.axaml  App.axaml.cs  LabSpikeAvalonia.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  app.manifest
spikes/lab-spike-core/: Cargo.toml
spikes/lab-spike-core/src/: lib.rs
spikes/lab-spike-harness/: Cargo.toml
spikes/lab-spike-harness/src/: main.rs
spikes/lab-spike-index/: Cargo.toml
spikes/lab-spike-index/src/: main.rs
spikes/results/: .gitignore  linux-avalonia.json  linux-harness-core.json  linux-slint.json  linux-tauri.json  macos-avalonia.json  macos-d-rust-index.json  macos-d-sqlite-fts.json  macos-d-sqlite.json  macos-harness-core.json  macos-slint.json  macos-tauri.json  sbom-spike-cargo-lock.json  windows-avalonia.json  windows-harness-core.json  windows-slint.json  windows-tauri.json
spikes/scripts/: measure-avalonia-windows.ps1  measure-avalonia.sh  measure-index-windows.ps1  measure-index.sh  measure-slint-linux.sh  measure-slint-windows.ps1  measure-tauri-windows.ps1  measure-tauri.sh  package-avalonia.sh  package-slint-windows.ps1  package-slint.sh  package-tauri.sh  pick-avalonia-tfm.sh  safe-pull.sh
spikes/slint/: README.md
spikes/slint-app/: Cargo.toml
spikes/slint-app/src/: main.rs
spikes/slint-app/ui/: app.slint
spikes/tauri/: README.md  package-lock.json
spikes/tauri/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri/src-tauri/src/: lib.rs  main.rs
spikes/tauri/src/routes/: +page.svelte
(+205 files in other folders)
