[workspace]
resolver = "2"
members = [
  "crates/lab-core",
  "crates/lab-case",
  "crates/lab-store",
  "crates/lab-crypto",
  "crates/lab-fsnap",
  "crates/lab-worker",
  "apps/lab-slint",
]

[workspace.package]
edition = "2021"
license = "LicenseRef-Trareon-Proprietary"
version = "0.1.0"

[workspace.dependencies]
lab-core = { path = "crates/lab-core" }
lab-case = { path = "crates/lab-case" }
lab-store = { path = "crates/lab-store" }
lab-crypto = { path = "crates/lab-crypto" }
lab-fsnap = { path = "crates/lab-fsnap" }
lab-worker = { path = "crates/lab-worker" }
