[workspace]
resolver = "2"
members = [
  "crates/lab-core",
  "crates/lab-case",
  "crates/lab-store",
  "crates/lab-crypto",
  "crates/lab-fsnap",
  "crates/lab-worker",
  "crates/lab-index",
  "crates/lab-storage",
  "crates/lab-fs",
  "crates/lab-artifacts",
  "crates/lab-transfer",
  "crates/lab-timeline",
  "crates/lab-hashset",
  "crates/lab-yara",
  "crates/lab-carving",
  "crates/lab-antiforensics",
  "apps/lab-slint",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
lab-core = { path = "crates/lab-core" }
lab-case = { path = "crates/lab-case" }
lab-store = { path = "crates/lab-store" }
lab-crypto = { path = "crates/lab-crypto" }
lab-fsnap = { path = "crates/lab-fsnap" }
lab-worker = { path = "crates/lab-worker" }
lab-index = { path = "crates/lab-index" }
lab-storage = { path = "crates/lab-storage" }
lab-fs = { path = "crates/lab-fs" }
lab-artifacts = { path = "crates/lab-artifacts" }
lab-transfer = { path = "crates/lab-transfer" }
lab-timeline = { path = "crates/lab-timeline" }
lab-hashset = { path = "crates/lab-hashset" }
lab-yara = { path = "crates/lab-yara" }
lab-carving = { path = "crates/lab-carving" }
lab-antiforensics = { path = "crates/lab-antiforensics" }
