[package]
name = "lab-slint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal Slint foundation UI for Trareon Lab"
build = "build.rs"

[[bin]]
name = "trareon-lab"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:slint", "dep:slint-build"]

[dependencies]
lab-core = { workspace = true }
lab-case = { workspace = true }
slint = { version = "1.9", optional = true }

[build-dependencies]
slint-build = { version = "1.9", optional = true }

[dev-dependencies]
tempfile = "3"
