[package]
name = "lab-slint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal Slint foundation UI for Trareon Lab"
build = "build.rs"

[[bin]]
name = "trareon-lab"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:slint", "dep:slint-build"]
demo_seed = []
local_ai = []

[dependencies]
lab-core = { workspace = true }
lab-case = { workspace = true }
lab-crypto = { workspace = true }
lab-storage = { workspace = true }
lab-index = { workspace = true }
lab-transfer = { workspace = true }
lab-fsnap = { workspace = true }
sha2 = "0.10"
hex = "0.4"
slint = { version = "1.9", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[build-dependencies]
slint-build = { version = "1.9", optional = true }

[dev-dependencies]
tempfile = "3"
