[package]
name = "lab-antiforensics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anti-forensics detection for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
lab-fs = { workspace = true }

[dev-dependencies]
tempfile = "3"
lab-storage = { workspace = true }
