[package]
name = "lab-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OS artifact parsers for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
