[package]
name = "lab-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Digest and signature envelope verification for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
