[package]
name = "lab-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filesystem enumeration readers for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
lab-store = { workspace = true }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
sha2 = "0.10"
