[package]
name = "lab-fsnap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe .fsnap preflight and importer for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
