[package]
name = "lab-hashset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NSRL / known-bad hash set matching for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
