[package]
name = "lab-hashset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NSRL / known-bad hash set matching for Trareon Lab"

[dependencies]
hex = "0.4"
lab-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
