[package]
name = "lab-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Forensic search/index store for Trareon Lab cases"

[dependencies]
lab-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
