[package]
name = "lab-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Disk image / raw evidence readers for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
lab-case = { workspace = true }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
