[package]
name = "lab-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Offline signed transfer packages for Trareon Lab"

[dependencies]
lab-core = { workspace = true }
lab-crypto = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
