[package]
name = "lab-spike-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless Gate A measurement harness for Trareon Lab spikes"

[[bin]]
name = "lab-spike-harness"
path = "src/main.rs"

[dependencies]
lab-spike-core = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
