[package]
name = "lab-spike-tauri"
version = "0.1.0"
description = "Trareon Lab Gate A spike — C-TAURI"
authors = ["Trareon"]
edition = "2021"
license = "MIT"

[lib]
name = "lab_spike_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lab-spike-core = { path = "../../lab-spike-core" }
parking_lot = "0.12"
